setup notes